[package]
name = "stm32f3-mfrc522"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Spanoghe <jonas@spanoghe.net>"]
description = "Example project for the `mfrc522` Rust library with STM32F3"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/jspngh/stm32f3-mfrc522"
keywords = ["rfid", "mfrc522", "embedded-hal", "mifare"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
cortex-m= "0.7"
cortex-m-rt= "0.7"
embedded-hal = "0.2.7"
nb = "1.0.0"
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
mfrc522 = "0.3"
stm32f3xx-hal = { version = "0.9.1", features = ["ld", "rt", "stm32f303xc"] }
